<package>
  <name>udpclient</name>
  <version>0.0.1</version>
  <description>udp client test</description>
  <maintainer email="seungkook.yun@gmail.com">Sean Seungkook Yun</maintainer>

  <license></license>

  
  <author>Sean Seungkook Yun</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pkg-config</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>pkg-config</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>boost</run_depend>
  
  <export>
  </export>
</package>

